2008-10-08  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Fix bootstrap to remove read-only directories right.
	* bootstrap: Remove automake-$APIVERSION correctly.

2008-10-06  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Improve test coverage of current TESTS semantics.
	* tests/check8.test: New test, for subdir tests and setting of
	$srcdir.
	* tests/check9.test: New test, check @substituted@ TESTS.
	* tests/Makefile.am: Update.

2008-10-05  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* m4/minuso.m4 (AM_PROG_CC_C_O): Work around shell quoting issue
	with AIX sh; fixes depcomp6.test failure.
	* NEWS, THANKS: Update.
	Report by Rainer Tammer.

	Print captured output before failing.
	* tests/acloca14.test, tests/acloca17.test, tests/acloca18.test,
	tests/aclocal.test, tests/acsilent.test, tests/alpha.test,
	tests/check4.test, tests/color.test, tests/fn99.test,
	tests/fn99subdir.test, tests/help.test, tests/init.test,
	tests/lisp8.test, tests/missing3.test, tests/pr220.test,
	tests/python11.test, tests/python4.test, tests/python5.test,
	tests/unused.test, tests/version8.test: When Exit is called
	after a command that has stdout or stderr redirected to a file
	for later inspection, output the file before failing the test.

	Fix some comment typos.
	* automake.in: Fix some comment typos.
	* lib/Automake/Condition.pm: Likewise.
	* lib/Automake/DisjConditions.pm: Likewise.
	* lib/Automake/Variable.pm: Likewise.
	* lib/Automake/tests/DisjConditions.pl: Likewise.

2008-09-22  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* tests/aclibobj.test: Fix race condition.

2008-09-21  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Fix man page creation without installed files.
	* doc/Makefile.am (update_mans): Use wrappers in tests/
	directory.
	($(srcdir)/aclocal-$(APIVERSION).1): Use versioned wrapper as
	input program to help2man.
	($(srcdir)/automake-$(APIVERSION).1): Likewise.
	Report by Eric Blake.

2008-09-20  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
