@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 2002  Free Software Foundation, Inc.
+# Copyright (C) 2002, 2008  Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -18,7 +18,7 @@
 # Only *new* indexes need to be declared at the top-level.
 # PR/375.
 
-required='makeinfo tex'
+required='makeinfo tex texi2dvi'
 . ./defs || Exit 1
 
 set -e
