@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 2003, 2004, 2006  Free Software Foundation, Inc.
+# Copyright (C) 2003, 2004, 2006, 2008  Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -17,7 +17,7 @@
 # Test support for building HTML documentation, and the many
 # install-DOC flavors.
 
-required='makeinfo-html tex'
+required='makeinfo-html tex texi2dvi'
 . ./defs || Exit 1
 
 set -e
