@@ -20,7 +20,7 @@
 # but preserve them in the output.
 # Also make sure TEXINFO_TEX is not distributed.
 
-required='makeinfo tex'
+required='makeinfo tex texi2dvi'
 . ./defs || Exit 1
 
 set -e
