@@ -1,5 +1,17 @@
 2008-10-08  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	Require texi2dvi in tests, makeinfo may not be enough.
+	* tests/txinfo16.test: RHEL 5.2 has makeinfo and texi2dvi in
+	separate packages, so also list the latter as required, as the
+	test generates DVI and/or PDF output (through distcheck).
+	* tests/txinfo18.test: Likewise.
+	* tests/txinfo21.test: Likewise.
+	* tests/txinfo22.test: Likewise.
+	* tests/txinfo3.test: Likewise.
+	* tests/version7.test: Likewise.
+	* THANKS: Update.
+	Report by Alexander Martens.
+
 	Fix bootstrap to remove read-only directories right.
 	* bootstrap: Remove automake-$APIVERSION correctly.
 
